Tags Overflow Fixed

--- a/src/components/JobCard/jobDetails.css
+++ b/src/components/JobCard/jobDetails.css
@@ -58,7 +58,7 @@
     text-transform: capitalize;
     background-color: #ededed;
     border-radius: 50px;
-    font-size: .7rem;
+    font-size: .5rem;
     font-weight: 600;
     color: var(--txtSecondary);
 
